--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clean": "^4.0.2",
     "daisyui": "^2.15.0",
     "header": "^0.1.1",
+    "layercake": "^6.1.0",
     "svelte-material-ui": "^6.0.0-beta.16"
   }
 }
