--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clean": "^4.0.2",
     "d3-delaunay": "^6.0.2",
     "d3-scale-chromatic": "^3.0.0",
+    "d3-shape": "^3.1.0",
     "daisyui": "^2.15.0",
     "header": "^0.1.1",
     "layercake": "^6.1.0",
