--- a/package.json
+++ b/package.json
@@ -1,55 +1,38 @@
 {
-  "name": "iot4ag-demo",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "prepare": "svelte-kit sync",
-    "check": "svelte-check --tsconfig ./jsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
-    "test": "playwright test",
-    "lint": "prettier --check --plugin-search-dir=. . && eslint .",
-    "format": "prettier --write --plugin-search-dir=. ."
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.21.0",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@smui/button": "^6.0.0-beta.16",
-    "@smui/card": "^6.0.0-beta.16",
-    "@smui/textfield": "^6.0.0-beta.16",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.12.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "postcss": "^8.4.14",
-    "prettier": "^2.5.1",
-    "prettier-plugin-svelte": "^2.5.0",
-    "smui-theme": "^6.0.0-beta.16",
-    "svelte-check": "^2.7.1",
-    "svelte-loader": "3.1.2",
-    "tailwindcss": "^3.0.24",
-    "ts-loader": "9.3.0",
-    "tslib": "2.4.0",
-    "typescript": "4.6.4",
-    "webpack": "5.72.1",
-    "webpack-cli": "4.9.2"
-  },
-  "type": "module",
-  "dependencies": {
-    "@rollup/plugin-typescript": "^8.3.2",
-    "clean": "^4.0.2",
-    "d3-delaunay": "^6.0.2",
-    "d3-scale-chromatic": "^3.0.0",
-    "d3-shape": "^3.1.0",
-    "daisyui": "^2.15.0",
-    "header": "^0.1.1",
-    "layercake": "^6.1.0",
-    "svelte": "^3.48.0",
-    "svelte-canvas": "^0.7.1",
-    "svelte-material-ui": "^6.0.0-beta.16"
-  }
+	"name": "dashboard",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"package": "svelte-kit package",
+		"preview": "svelte-kit preview",
+		"prepare": "svelte-kit sync",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
+		"format": "prettier --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"@typescript-eslint/eslint-plugin": "^5.10.1",
+		"@typescript-eslint/parser": "^5.10.1",
+		"autoprefixer": "^10.4.7",
+		"eslint": "^8.12.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss": "^8.4.14",
+		"prettier": "^2.5.1",
+		"prettier-plugin-svelte": "^2.5.0",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.2.6",
+		"svelte-preprocess": "^4.10.6",
+		"tailwindcss": "^3.0.24",
+		"tslib": "^2.3.1",
+		"typescript": "~4.6.2"
+	},
+	"type": "module",
+	"dependencies": {
+		"daisyui": "^2.15.2"
+	}
 }
