--- a/package.json
+++ b/package.json
@@ -26,13 +26,23 @@
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.10.6",
+		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.0.24",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"daisyui": "^2.15.2"
+		"@types/d3-format": "^3.0.1",
+		"@types/d3-scale": "^4.0.2",
+		"@types/d3-scale-chromatic": "^3.0.0",
+		"@types/d3-shape": "^3.1.0",
+		"d3-format": "^3.1.0",
+		"d3-scale": "^4.0.2",
+		"d3-scale-chromatic": "^3.0.0",
+		"d3-shape": "^3.1.0",
+		"daisyui": "^2.15.2",
+		"layercake": "^6.1.0",
+		"nats.ws": "^1.8.1"
 	}
 }
