--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@types/format-duration": "^1.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
 		"autoprefixer": "^10.4.7",
@@ -29,7 +30,8 @@
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.0.24",
 		"tslib": "^2.3.1",
-		"typescript": "~4.7.3"
+		"typescript": "~4.7.3",
+		"vite-plugin-iso-import": "^0.1.3"
 	},
 	"type": "module",
 	"dependencies": {
@@ -42,7 +44,11 @@
 		"d3-scale-chromatic": "^3.0.0",
 		"d3-shape": "^3.1.0",
 		"daisyui": "^2.15.3",
+		"format-duration": "^2.0.0",
 		"layercake": "^6.1.0",
-		"nats.ws": "^1.8.1"
+		"leaflet": "^1.8.0",
+		"nats.ws": "^1.8.1",
+		"svelte-leafletjs": "^0.9.0",
+		"webrtc-adapter": "^8.1.1"
 	}
 }
